--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fortawesome/fontawesome-free": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@material-tailwind/html": "^2.2.2",
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
@@ -56,6 +58,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "gh-pages": "^6.1.1",
     "tailwindcss": "^3.4.3"
   }
