--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "concurrently": "^8.2.2",
     "dotenv": "^16.4.5",
     "react": "^18.2.0",
+    "react-avatar-edit": "^1.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
